# FrootsPi_ros

./: .travis.yml  LICENSE  README.md
frootspi_core/: CMakeLists.txt  README.md  package.xml
frootspi_core/launch/: frootspi.launch
frootspi_core/param/: kick_power.yaml
frootspi_core/tests/: test_frootspi.test
frootspi_dribbler/: CMakeLists.txt  README.md  package.xml
frootspi_dribbler/scripts/: dribbler_node.py  motor_driver.py
frootspi_dribbler/scripts/tests/: test_motor_driver.py
frootspi_hello_world/: CMakeLists.txt  README.md  package.xml
frootspi_hello_world/scripts/: hello_world.py
frootspi_hello_world/scripts/tests/: test_hello.py
frootspi_hello_world/scripts/util/: hello.py
frootspi_hello_world/tests/: test_hello_world.py
frootspi_io/: CMakeLists.txt  README.md  package.xml
frootspi_joy/: CMakeLists.txt  README.md  package.xml
frootspi_joy/scripts/: joy_node.py
frootspi_kicker/: CMakeLists.txt  README.md  package.xml
frootspi_kicker/scripts/: kicker_node.py
frootspi_kicker/src/: kicker_node.cpp
frootspi_msg/: CMakeLists.txt  package.xml
frootspi_msg/msg/: FrootsCommand.msg
frootspi_velocity_converter/: CMakeLists.txt  README.md  package.xml
frootspi_velocity_converter/scripts/: calc_motor_order.py  velocity_converter_node.py
frootspi_velocity_converter/scripts/tests/: test_calc_motor_order.py
test_scripts/: README.md  travis_build_frootspi.bash  travis_ros_install.bash  travis_script.bash
