<?xml version="1.0"?>
<package format="2">
  <name>frootspi_dribbler</name>
  <version>0.0.0</version>
  <description>The frootspi_dribbler package</description>

  <maintainer email="macakasit@gmail.com">ShotaAk</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
