<?xml version="1.0"?>
<package format="2">
  <name>frootspi_joy</name>
  <version>0.0.0</version>
  <description>The frootspi_joy package</description>

  <maintainer email="macakasit@gmail.com">ShotaAK</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>joy</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>


</package>
