<?xml version="1.0"?>
<package format="2">
  <name>frootspi_kicker</name>
  <version>0.0.0</version>
  <description>The frootspi_kicker package</description>

  <maintainer email="macakasit@gmail.com">ShotaAk</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>frootspi_msg</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>frootspi_msg</exec_depend>

</package>
